--- a/.gitignore
+++ b/.gitignore
@@ -37,3 +37,10 @@ testem.log
 # System Files
 .DS_Store
 Thumbs.db
+todo.txt
+src/app/components/shared/ui/purple-panel/panel2.component.css
+src/app/components/shared/ui/purple-panel/panel2.component.min.css
+src/app/components/shared/ui/scroll/scroll.component.css
+src/app/components/shared/ui/scroll/scroll.component.min.css
+src/assets/fonts/beh/stylesheet.css
+src/assets/fonts/beh/stylesheet.min.css
