--- a/.gitignore
+++ b/.gitignore
@@ -38,11 +38,5 @@ testem.log
 .DS_Store
 Thumbs.db
 todo.txt
-src/app/components/shared/ui/purple-panel/panel2.component.css
-src/app/components/shared/ui/purple-panel/panel2.component.min.css
-src/app/components/shared/ui/scroll/scroll.component.css
-src/app/components/shared/ui/scroll/scroll.component.min.css
-src/assets/fonts/beh/stylesheet.css
-src/assets/fonts/beh/stylesheet.min.css
-src/app/pages/home/home.component.min.css
-src/app/pages/home/home.component.css
+*.css
+*.min.css
